[gd_scene load_steps=2 format=1]

[ext_resource path="res://UI_MenuBar/MenuBar.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 24.0
alignment = 0
script/script = ExtResource( 1 )

[node name="ButtonFile" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 35.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "File"
flat = true

[node name="MenuFile" type="PopupMenu" parent="ButtonFile"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 132.0
margin/bottom = 148.0
popup/exclusive = false
items = [ "New...", null, false, false, false, 0, 0, null, "", false, "Open...", null, false, false, true, 1, 0, null, "", false, "Save", null, false, false, true, 2, 0, null, "", false, "Save As...", null, false, false, true, 3, 0, null, "", false, "Element 4", null, false, false, false, 4, 0, null, "", true, "Recent Projects...", null, false, false, true, 5, 0, null, "", false ]

[node name="ButtonTime" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 39.0
margin/top = 0.0
margin/right = 83.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Time"
flat = true

[connection signal="pressed" from="ButtonFile" to="." method="_on_ButtonFile_pressed"]

[connection signal="item_pressed" from="ButtonFile/MenuFile" to="." method="_on_MenuFile_item_pressed"]


